[metadata]
name = boxing
version = 0.1.4
url = https://github.com/acifani/boxing
license = BSD 3-Clause License
license_files = LICENSE
author = Alessandro Cifani
author_email = alessandro.cifani@gmail.com
description = Draw boxes like never before!
long_description = readme
classifiers = 
    Development Status :: 3 - Alpha 
    Intended Audience :: Developers
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Topic :: Software Development :: Libraries :: Python Modules
    Programming Language :: Python

[options]
packages = boxing
include_package_data = True